fix toool logo overlap and center

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,7 @@ body.light-mode {
   img.con-logo-flip-flip {
     filter: invert(100%);
   }
-  .light-mode-logo {
+  .light-mode-kernel-logo {
     width: 95%;
   }
   .dark-mode-logo {
@@ -90,7 +90,7 @@ body.dark-mode {
   img.logo-brighten {
     filter: invert(100%) brightness(2);
   }
-  .dark-mode-logo {
+  .dark-mode-kernel-logo {
     width: 95%;
   }
   .light-mode-logo {
