--- a/src/pages/Sponsors/Sponsors.scss
+++ b/src/pages/Sponsors/Sponsors.scss
@@ -87,9 +87,9 @@
           }
         }
       }
-      .toool-logo {
-        max-height: 210px;
-      }
+      // .toool-logo {
+      //   max-height: 210px;
+      // }
     }
   }
 }
